[package]
name = "my-project"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "builder", "builder-wasm", "protocol", "wasm", ]

[lib]
name = "my_project"
crate-type = ["cdylib"]

[dependencies]
cbindgen = "0.27.0"
pyo3 = "0.19.0"
notify-debouncer-full = "0.3.1"
serde = "1.0.209"
serde_json = "1.0.127"
protocol = { path = "./protocol" }
